--- a/app/components/mandatees/mandatees-panel/mandatees-panel-view.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-view.hbs
@@ -45,7 +45,7 @@
                     @size="small"
                   />
                   <span class="auk-u-mx-2">
-                    {{mandatee.person.fullName}}
+                    {{mandatee.person.fullName}}, {{mandatee.title}}
                   </span>
                 </div>
               </td>
