--- a/app/templates/cases/case/subcases-demo/subcase-demo/first-approval.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo/first-approval.hbs
@@ -28,7 +28,7 @@
   />
 
   {{!-- Documents --}}
-  <div id="documents" class="auk-u-mb-4">
+  <div id="documents" class="auk-u-mb-4 c-linked-documents">
     <Auk::Panel data-test-subcase-description-panel>
       <Auk::Panel::Header>
         <Auk::Toolbar>
@@ -86,7 +86,7 @@
      <Subcase::SubcaseVersionsPanel @subcase={{@model.subcase}} @demo={{true}} @step="Eerste principiële goedkeuring" />
   </div>
 
- 
+
 {{/if}}
 
 <ConfirmationModal
