--- a/app/components/subcase-demo/approval-titles-panel/approval-titles-panel-edit.hbs
+++ b/app/components/subcase-demo/approval-titles-panel/approval-titles-panel-edit.hbs
@@ -5,11 +5,7 @@
         <Auk::Toolbar::Item>
           <div class="au-u-flex au-u-flex--spaced-small">
             <h4 class="auk-panel__title">
-              {{#if (is-nota @subcase.agendaItemType)}}
-                {{t "note"}}
-              {{else}}
-                {{t "text"}}
-              {{/if}}
+              Overzicht
             </h4>
           </div>
         </Auk::Toolbar::Item>
@@ -17,17 +13,6 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body>
-    <div class="auk-u-mb-4">
-      <div class="auk-form-group">
-        <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
-        <AuToggleSwitch
-          data-test-subcase-titles-edit-confidential={{true}}
-          @checked={{@subcase.confidential}}
-          id="subcase-confidential"
-          @onChange={{set this "confidentialChanged" true}}
-        />
-      </div>
-    </div>
     <div class="auk-u-mb-4">
       <div class="auk-form-group">
         <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
@@ -75,6 +60,24 @@
       </AuFieldset>
     </div> --}}
     <div class="auk-form-group">
+      <Auk::Label>Procedurestap type</Auk::Label>
+      <AuRadioGroup
+        data-test-new-subcase-type
+        @alignment="inline"
+        @selected={{this.agendaItemType}}
+        @onChange={{this.onChangeAgendaItemType}}
+        as |Group|
+      >
+        {{#each this.agendaItemTypes as |type|}}
+          <Group.Radio
+            @value={{type}}
+          >
+            {{type.label}}
+          </Group.Radio>
+        {{/each}}
+      </AuRadioGroup>
+    </div>
+    <div class="auk-form-group">
       <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
       <Utils::ModelSelector
         @modelName="subcase-type"
@@ -85,13 +88,24 @@
         @onChange={{this.selectSubcaseType}}
       />
     </div>
-    {{!-- <div class="auk-form-group">
+    <div class="auk-form-group">
       <Auk::Label>{{t "subcase-name"}}</Auk::Label>
       <AuInput
         @width="block"
         @value={{mut this.subcaseName}}
       />
-    </div> --}}
+    </div>
+    <div>
+      <div class="auk-form-group">
+        <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
+        <AuToggleSwitch
+          data-test-subcase-titles-edit-confidential={{true}}
+          @checked={{@subcase.confidential}}
+          id="subcase-confidential"
+          @onChange={{set this "confidentialChanged" true}}
+        />
+      </div>
+    </div>
   </Auk::Panel::Body>
   <Auk::Panel::Footer>
     <Auk::Toolbar>
