KAS-4501 Refactor 'custom-application' folder styling

--- a/app/components/documents/document-view.hbs
+++ b/app/components/documents/document-view.hbs
@@ -4,7 +4,7 @@
       data-test-document-view-file
       type="application/pdf"
       data={{@file.inlineViewLink}}
-      class="pdf-view"
+      class="au-u-maximize-width au-u-maximize-height"
     >
     </object>
   {{else}}
