--- a/app/components/cases/subcases/government-areas-panel.hbs
+++ b/app/components/cases/subcases/government-areas-panel.hbs
@@ -6,35 +6,37 @@
     @isLoading={{this.areLoadingTasksRunning}}
     @reserveSpace={{false}}
   >
-    <Auk::Panel::Body class="au-c-panel-grid">
-      {{#each this.domainSelections as |domainSelection|}}
-        <AuCheckboxGroup class="au-c-control-group--grid">
-          <AuCheckboxGroup class="auk-u-maximize-width">
-            <AuCheckbox
-              @checked={{domainSelection.isSelected}}
-              @onChange={{fn this.toggleDomainSelection domainSelection}}
-              @disabled={{@disabled}}
-            >
-              <span class="au-u-medium">{{domainSelection.domain.label}}</span>
-            </AuCheckbox>
-            <AuCheckboxGroup
-              @selected={{domainSelection.selectedFields}}
-              @onChange={{this.toggleItem}}
-              @disabled={{@disabled}}
-              as |Group|
-            >
-              {{#each domainSelection.availableFields as |field|}}
-                <Group.Checkbox
-                  @value={{field}}
-                  @onChange={{fn this.toggleFieldSelection field}}
-                >
-                  {{field.label}}
-                </Group.Checkbox>
-              {{/each}}
+    <Auk::Panel::Body>
+      <div class="au-o-grid au-o-grid--tiny">
+        {{#each this.domainSelections as |domainSelection|}}
+          <AuCheckboxGroup class="au-o-grid__item au-u-1-1 au-u-1-3@medium">
+            <AuCheckboxGroup class="auk-u-maximize-width">
+              <AuCheckbox
+                @checked={{domainSelection.isSelected}}
+                @onChange={{fn this.toggleDomainSelection domainSelection}}
+                @disabled={{@disabled}}
+              >
+                <span class="au-u-medium">{{domainSelection.domain.label}}</span>
+              </AuCheckbox>
+              <AuCheckboxGroup
+                @selected={{domainSelection.selectedFields}}
+                @onChange={{this.toggleItem}}
+                @disabled={{@disabled}}
+                as |Group|
+              >
+                {{#each domainSelection.availableFields as |field|}}
+                  <Group.Checkbox
+                    @value={{field}}
+                    @onChange={{fn this.toggleFieldSelection field}}
+                  >
+                    {{field.label}}
+                  </Group.Checkbox>
+                {{/each}}
+              </AuCheckboxGroup>
             </AuCheckboxGroup>
           </AuCheckboxGroup>
-        </AuCheckboxGroup>
-      {{/each}}
+        {{/each}}
+      </div>
     </Auk::Panel::Body>
   </Utils::LoadableContent>
 </Auk::Panel>
