--- a/app/components/mandatees/mandatees-selector-modal-alt.hbs
+++ b/app/components/mandatees/mandatees-selector-modal-alt.hbs
@@ -29,6 +29,13 @@
         @checklist={{true}}
         @buffer={{@buffer}}
       />
+      <AuButton
+        @skin="link"
+        class="au-u-h-functional au-u-padding-left-none au-u-margin-top-small"
+        @icon="add"
+      >
+        {{t "show-past-ministers"}}
+      </AuButton>
     </Utils::LoadableContent>
   </Auk::Modal::Body>
   <Auk::Modal::Footer @custom={{true}}>
