--- a/app/components/auk/checkbox-tree.hbs
+++ b/app/components/auk/checkbox-tree.hbs
@@ -17,8 +17,8 @@
       <Group.Checkbox
         @value={{item}}
         @disabled={{@disabled}}
-      > 
-        {{get item this.itemStructure.label}}{{#if (eq this.itemStructure.role 'true')}}{{#each item.mandatees as |role index|}}{{#if (eq index 0)}}, {{role.title}}{{/if}}{{/each}}{{/if}}
+      >
+        {{get item this.itemStructure.label}}
       </Group.Checkbox>
     {{/each}}
   </AuCheckboxGroup>
