KAS-4527: when navigating to subcase now shows a sidebar with other subcases + removed feature flag for new case creation

--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -1,5 +1,5 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
+<Cases::CasesHeader/>
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <Auk::Toolbar>
