KAS-4543 small fix for subcase name and hotfix for urgent issue KAS-4547

--- a/app/components/cases/subcases/new-subcase-form.hbs
+++ b/app/components/cases/subcases/new-subcase-form.hbs
@@ -163,6 +163,15 @@
                         {{t "cancel"}}
                       </AuButton>
                     {{/if}}
+                      <AuButton
+                        @skin="naked"
+                        @icon="trash"
+                        @alert={{true}}
+                        @hideText={{true}}
+                        {{on "click" this.clearSubcaseName}}
+                      >
+                        {{t "cancel"}}
+                      </AuButton>
                   </div>
                 </AuFormRow>
               </div>
